# payment_form

./: .dockerignore  .env.docker.sample  .env.sample  Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: discounts.json  items.json  orders.json
products/: admin.py  api_views.py  models.py  services.py  urls.py
products/locale/ru/LC_MESSAGES/: django.po
products/management/commands/: fixturedata.py
products/migrations/: 0001_initial.py  0002_order.py  0003_discount_alter_order_name_order_discount.py
products/templates/: item_detail.html  order_detail.html
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
